# llm-consistency-vis

./: PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  REMOVAL_SUMMARY.md  UMAP_3D_IMPLEMENTATION_SUMMARY.md  asset-manifest.json  index.html  package-lock.json  package.json  start-server.py  test-interaction-summary.md
src/: single_example.tsx  single_example_demo_optimized.tsx  single_example_imageasgraph.tsx  single_example_textasgraph.tsx  single_example_ultra_optimized.tsx  single_example_wordgraph.tsx  single_example_wordgraph_optimized.tsx  state.tsx
src/hooks/: useWasmTextProcessor.ts
src/types/: webgpu.d.ts
src/webgpu/: WebGPUForceSimulation.ts  forceSimulation.wgsl
src/workers/: textProcessingWorker.ts
static/js/: main.2f9c8cb7.js  main.2f9c8cb7.js.LICENSE.txt  main.2f9c8cb7.js.map
test-results/: .last-run.json
test-results/tests-othello-image-as-gra-40340-ter-visualization-correctly/: error-context.md
tests/: integration-verification.spec.ts  manual-interaction-guide.md  othello-image-as-graph.spec.ts  text-as-graph-tab.spec.ts  verify-console-output.js
text-processor-wasm/: Cargo.toml  build.sh
text-processor-wasm/src/: lib.rs
